--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Iniciado Banco de Dados
       run: docker compose up -d postgres
 
-    - lint: 
+    - name: Lint
+      run: docker run --rm -itv $(pwd):/app -w /app golangci/golangci-lint golangci-lint run controllers/ database/ models/ routes/
+
 
     - name: Test
       run: go test -v main_test.go
