--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,17 +1,13 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Integração Continua
+name: "Verificações de código"
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
 
-  ci:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -21,24 +17,15 @@ jobs:
       with:
         go-version: '1.22'
 
-    - name: Iniciado Banco de Dados
+    - name: Inicia banco
       run: docker compose up -d postgres
 
     - name: Lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.60
+        version: v1.59
         args: controllers/ database/ models/ routes/
-
 
     - name: Test
       run: DB_HOST=${{ secrets.DB_HOST }} DB_PASSWORD=${{ secrets.DB_PASSWORD }} DB_USER=${{ secrets.DB_USER }} DB_NAME=${{ secrets.DB_NAME }} DB_PORT=${{ secrets.DB_PORT }} go test -v main_test.go
-
-    - name: Build
-      run: go build main.go
-
-    - name: Projeto Compilado
-      uses: actions/upload-artifact@v4
-      with:
-        name: projeto_compilado
-        path: main
+    
