--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: "Construção do artefato"
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "build"]
+  workflow_dispatch:
+    
 
 jobs:
   build:
@@ -10,16 +12,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Docker login
+      uses: docker/login-action@v3
       with:
-        go-version: '1.22'
-      
-    - name: Build
-      run: go build main.go
-
-    - name: Projeto compilado
-      uses: actions/upload-artifact@v4
+        username: joao00
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        name: projeto_compilado
-        path: main
+          push: true
+          tags: latest,${{ github.sha }}
