--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
       uses: docker/build-push-action@v6
       with:
           push: true
-          tags: latest,${{ github.sha }}
+          tags: joao00/go_lang_cicd:latest,${{ github.sha }}
